style(LeftAsideCtnr) fix style bug on mobile

--- a/web-client/src/components/avatar-cpnt/AvatarCpnt.scss
+++ b/web-client/src/components/avatar-cpnt/AvatarCpnt.scss
@@ -3,15 +3,19 @@
 
 .avatar{
     width:100%;
-    height:175px;
+    height:150px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20px 0;
+
+    @include m.bpFactory($max: v.$s) {
+        height: 100px;
+    }
     
     .a-image {
-        width:150px;
-        height:150px;
+        width:120px;
+        height:120px;
         border: 5px solid v.$ternary;
         border-radius: 50%;
         transition: width 350ms ease-in-out, height 350ms ease-in-out, margin 350ms ease-in-out ;
@@ -26,7 +30,7 @@
         color:v.$black;
         font-size:1.5rem;
         margin-top: 0.5rem;
-        
+
         &.hide-name{
             display:none;
         }
