--- a/web-client/src/components/menu-button-cpnt/MenuButtonCpnt.scss
+++ b/web-client/src/components/menu-button-cpnt/MenuButtonCpnt.scss
@@ -5,6 +5,7 @@
     display:flex;
     justify-content: space-around;
     color: v.$black;
+    flex-direction: row;
     
     &.btn-wrapper-column{
         flex-direction:column;
