--- a/web-client/src/containers/left-aside-ctnr/LeftAsideCtnr.scss
+++ b/web-client/src/containers/left-aside-ctnr/LeftAsideCtnr.scss
@@ -13,11 +13,12 @@
 
   @include m.bpFactory($max: v.$s) {
     max-height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 80%;
-    //transform: translateX(-100%);
+    transform: translateX(0%);
+    transition: transform 350ms ease-in-out;
   }
 
   &.visible {
@@ -26,7 +27,6 @@
     @include m.bpFactory($max: v.$s) {
       width: 80%;
       transform: translateX(-100%);
-
     }
   }
 
