--- a/web-client/src/style.css
+++ b/web-client/src/style.css
@@ -18,10 +18,12 @@
 @media only screen and (max-width: 760px) {
   .left-aside {
     max-height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 80%;
+    transform: translateX(0%);
+    transition: transform 350ms ease-in-out;
   }
 }
 .left-aside.visible {
@@ -56,15 +58,20 @@
 
 .avatar {
   width: 100%;
-  height: 175px;
+  height: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 20px 0;
 }
+@media only screen and (max-width: 760px) {
+  .avatar {
+    height: 100px;
+  }
+}
 .avatar .a-image {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   border: 5px solid #49BEB7;
   border-radius: 50%;
   transition: width 350ms ease-in-out, height 350ms ease-in-out, margin 350ms ease-in-out;
@@ -137,6 +144,7 @@
   display: flex;
   justify-content: space-around;
   color: #141414;
+  flex-direction: row;
 }
 .btn-wrapper.btn-wrapper-column {
   flex-direction: column;
